syntax = "proto3";
package factset.protobuf.stach.v2.table;

option csharp_namespace = "FactSet.Protobuf.Stach.V2.Table";
option go_package = "github.com/factset/stachschema-sdks/go/fds/protobuf/stach/v2/table";
option java_package = "com.factset.protobuf.stach.v2.table";
option java_outer_classname = "MetadataCollectionProto";

import "fds/protobuf/stach/v2/table/MetadataItem.proto";
import "fds/protobuf/stach/v2/table/MetadataLocations.proto";

// A collection of metadata for a table
message MetadataCollection {
  // The metadata items associated with a table
  map<string, MetadataItem> items = 1;

  // The locations where metadata items are associated
  MetadataLocations locations = 2;
}